# sirius-hydra

./: .gitignore  Cargo.toml  README.md  config.sample.yaml  env.sample.config  sample.config.yaml
.cargo/: config.toml
scripts/: -base.sh  -build-run-dev.sh  -deploy-build-release.sh  -remote-build-run-dev.sh  -remote-build-run-release.sh  -remote-deploy-release.sh  -resets.sh  build-run-dev.sh  deploy-build-release.sh  remote-build-run-dev.sh  remote-build-run-release.sh  remote-deploy-build-release.sh  run-sirius-hydra.sh
src/: main.rs
src/common/models/: config.rs
src/constants/: app_env.rs  default_values.rs  file_paths.rs  mod.rs  pins_values.rs  strings.rs  urls.rs
src/helpers/: mod.rs
src/helpers/logs/: fern_log.rs
src/helpers/parsers/: setting_files.rs
web-radio/: index.html
