[package]
name = "sirius-hydra"
description = "IOT Hydra"
version = "0.1.0"
edition = "2018"
authors = ["Ganesh Rathinavel <ganeshrvel@outlook.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"

serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
serde_derive = "^1.0.126"

fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
anyhow = "1.0.51"
chrono = "0.4.19"
#thiserror = "1.0.30"

#ctrlc = "3.2.1"
sysinfo = "0.23.8"

#nix = "0.23.1"
# tokio = { version = "1.14.0", features = ["full"] }

[dev-dependencies]
rusty-hook = "^0.11.2"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1



